kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-go-api
  namespace: experiment
spec:
  selector:
    matchLabels:
      run: simple-go-api
  template:
    metadata:
      labels:
        run: simple-go-api
    spec:
      securityContext:
        runAsUser: 10001
      containers:
      - name: simple-go-api
        image: ghcr.io/mrofisr/simple:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: simple-go-api
  namespace: experiment
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    run: simple-go-api
