kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-go-api
  namespace: backend
  labels:
    run: simple-go-api
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    run: simple-go-api
    app: simple-go-api
  type: LoadBalancer
  externalIPs:
    - "34.101.135.238"
